--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,9 @@ license = "MIT"
 [lib]
 crate-type = ["cdylib", "rlib"]
 
+[dev-dependencies]
+serde = {version = "1.0.106", features = ["derive"]}
+serde_json = "1.0.50"
+
 [dependencies]
+bytes = "0.5"
